argoCD/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayane-shortlink
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ayane-shortlink
  replicas: 1
  template:
    metadata:
      labels:
        app: ayane-shortlink
    spec:
      imagePullSecrets:
        - name: internal-harbor
      containers:
        - name: app
          image: registry.uniproject.jp/ayane/shortlink:0.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: default-port
          resources:
            limits:
              memory: "2Gi"
              cpu: "2000m"
            requests:
              memory: "1Gi"
              cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayane-shortlink-db
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ayane-shortlink-db
  replicas: 1
  template:
    metadata:
      labels:
        app: ayane-shortlink-db
    spec:
      imagePullSecrets:
        - name: internal-harbor
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: "/var/lib/postgresql/data"
            - name: postgres-config-volume
              mountPath: "/etc/postgresql/postgresql.conf"
              subPath: postgresql.conf
            - name: postgres-config-volume
              mountPath: "/etc/postgresql/pg_hba.conf"
              subPath: pg_hba.conf
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: ayane-shortlink
        - name: postgres-config-volume
          configMap:
            name: postgres-config
