argoCD/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: .ayane.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ayane-shortlink
                port:
                  number: 80
